--- a/arm_mobility/CMakeLists.txt
+++ b/arm_mobility/CMakeLists.txt
@@ -7,6 +7,7 @@ project(arm_mobility)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
+  dynamic_reconfigure
 )
 
 ## System dependencies are found with CMake's conventions
@@ -84,10 +85,9 @@ find_package(catkin REQUIRED COMPONENTS
 ##     and list every .cfg file to be processed
 
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
+ generate_dynamic_reconfigure_options(
+   cfg/arm_dyn.cfg
+)
 
 ###################################
 ## catkin specific configuration ##
